--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -1,11 +1,11 @@
 \begin{titlepage}
 \begin{center}
 \vspace*{0.8cm}
-\noindent {\Huge \textbf{Heavy Semileptonics from Lattice (NR)QCD}} \\
+\noindent {\Huge \textbf{Heavy Semileptonic Form Factors from Lattice Quantum Chromodynamics}} \\
 \vspace*{0.5cm}
 \noindent \LARGE \emph{Euan McLean} \\
 \vspace*{1.3cm}
-\noindent \large \emph{Supervised by Prof. Christine Davies and Dr. Christoph Englert} \\
+\noindent \large \emph{Supervised by Prof. Christine Davies} \\
 \vspace*{0.8cm}
 \noindent \large \emph{Submitted in fulfillment of the requirements for the degree of} \\
 \vspace*{0.1cm}
@@ -27,7 +27,7 @@
 \begin{vcenterpage}
 \noindent\rule[2pt]{\textwidth}{0.5pt}
 \begin{center}
-{\large\textbf{Heavy Semileptonics from Lattice (NR)QCD}}
+{\large\textbf{Heavy Semileptonic Form Factors from Lattice Quantum Chromodynamics}}
 \end{center}
 {\large\textbf{Abstract:}}
 \\
