--- a/Thesis.tex
+++ b/Thesis.tex
@@ -17,9 +17,9 @@ I claim sole credit for everything in this thesis.
 \mainmatter
 
 \include{Chapter1}
-
 \include{Chapter2}
-
+\include{Chapter3}
+\include{Chapter4}
 
 % \appendix
 
