--- a/Thesis.bib
+++ b/Thesis.bib
@@ -18,6 +18,20 @@ reportNumber   = "DAMTP-2013-14",
 SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
 }
 
+@article{Lebed:1991sq,
+      author         = "Lebed, Richard F. and Suzuki, Mahiko",
+      title          = "{Current algebra and the Ademollo-Gatto theorem in spin
+                     flavor symmetry of heavy quarks}",
+      journal        = "Phys. Rev.",
+      volume         = "D44",
+      year           = "1991",
+      pages          = "829-836",
+      doi            = "10.1103/PhysRevD.44.829",
+      reportNumber   = "UCB-PTH-91-11, LBL-30439",
+      SLACcitation   = "%%CITATION = PHRVA,D44,829;%%"
+ }
+								  
+
 @article{Bazavov:2012xda,
       author         = "Bazavov, A. and others",
       title          = "{Lattice QCD ensembles with four flavors of highly
@@ -92,15 +106,6 @@ SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
         url = {https://github.com/gplepage/corrfitter
 	  urldate = {2017-05-01}
 	  }
-
-@online{HFAG,
-  author = {Heavy Flaour Averaging Group},
-    title = {RD Plane: https://www.slac.stanford.edu/xorg/hfag/semi/eps15/eps15_dtaunu.html},
-      year = 2015,
-        url = {https://www.slac.stanford.edu/xorg/hfag/semi/eps15/eps15_dtaunu.html
-	  urldate = {2017-05-01}
-	  }
-
 
 @article{Monahan:2012dq,
       author         = "Monahan, Christopher and Shigemitsu, Junko and Horgan,
