--- a/formatAndDefs.tex
+++ b/formatAndDefs.tex
@@ -27,9 +27,10 @@
 \usepackage{subcaption}
 
 
- \def\be   {\begin{equation}}   
- \def\ee   {\end{equation}}
+ \def\be   {\begin{align}}   
+ \def\ee   {\end{align}}
 
+\newcommand{\order}[1]{\mathcal{O}\left( #1 \right)}
 
 % centered page environment
 
